// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableCheckbox > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Select Row"
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-_r_0_"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </span>
    </span>
  </label>
</td>
`;

exports[`TableCheckbox > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis custom-class-name"
  style="pointer-events: none;"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Select Row"
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-_r_0_"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </span>
    </span>
  </label>
</td>
`;

exports[`TableCheckbox > should handle the aria-label/aria-labelledby props correctly 1`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-label="Custom Label"
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-_r_2_"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </span>
    </span>
  </label>
</td>
`;

exports[`TableCheckbox > should handle the aria-label/aria-labelledby props correctly 2`] = `
<td
  class="rmd-table-cell rmd-table-cell--input-toggle rmd-align-left rmd-nowrap rmd-ellipsis"
>
  <label
    class="rmd-label rmd-label--gap rmd-label--reversed"
  >
    <span
      class="rmd-checkbox rmd-input-toggle rmd-input-toggle--em rmd-input-toggle--normal rmd-input-toggle--uncontrolled"
    >
      <input
        aria-labelledby="another-id"
        autocomplete="off"
        class="rmd-hidden-input"
        id="checkbox-_r_2_"
        type="checkbox"
      />
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box_outline_blank
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </span>
    </span>
  </label>
</td>
`;
